Ensure columns retain integrity
If the content of a block is too long, it could wrap weirdly. Now it
shouldn’t.

--- a/apps/assets/stylesheets/_detail-page.scss
+++ b/apps/assets/stylesheets/_detail-page.scss
@@ -53,6 +53,10 @@
         &.wider {
             @include grid-column(2/3);
         }
+
+        &.breaker {
+            clear: left;
+        }
     }
 
     dl > hr {
